# tst-pdm

./: README.md  pyproject.toml
.github/: dependabot.yml
.github /: dependabot.yml
.github/workflows/: update-deps.yml
