[project]
name = "tst-pdm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hcooh", email = "hcoohb@gmail.com"},
]
dependencies = [
    "gunicorn==21.2.0",
    "pandas==2.1.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
test = [
    "pandas==2.1.3",
]
[tool.pdm]
distribution = false
